<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliderCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor"
    app:cardCornerRadius="16dp">

    <include
        android:id="@+id/sliderCardThumbnail"
        layout="@layout/slider_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sliderCardConsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/sum"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:drawableEnd="@drawable/ic_edit"
            android:drawablePadding="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/sumMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:lineHeight="16sp"
            android:textColor="@color/design_default_color_error"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Минимум 500" />

        <SeekBar
            android:id="@+id/sumSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:progress="5"
            android:progressDrawable="@drawable/progress"
            android:splitTrack="true"
            android:thumb="@drawable/ic_picker"
            android:thumbOffset="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sum" />

        <TextView
            android:id="@+id/rangeSumMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:lineHeight="16sp"
            android:text="@string/sum_range_min"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sumSlider" />

        <TextView
            android:id="@+id/rangeSumMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:lineHeight="16sp"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sumSlider"
            tools:text="10 000 ₽" />

        <TextView
            android:id="@+id/conditionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:lineHeight="16sp"
            android:text="@string/conditions_title"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rangeSumMin" />

        <TextView
            android:id="@+id/conditionBody"
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/conditions_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conditionTitle" />

        <Button
            android:id="@+id/button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="13dp"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conditionBody" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>