<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_with_info"
        app:title="@string/home"
        app:titleTextColor="?attr/colorOnPrimary" />

    <include
        android:id="@+id/error"
        layout="@layout/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSecondary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <include
                    layout="@layout/banner_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/sumOfLoan"
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/sum_title" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sliderCardShimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    shimmer:duration="100">

                    <include
                        android:id="@+id/sliderCard"
                        layout="@layout/slider_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="24dp" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/myLoansTitle"
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:text="@string/my_loans_title" />

                <TextView
                    android:id="@+id/myLoansBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:lineHeight="16sp"
                    android:text="@string/my_loans_body"
                    android:textColor="?attr/colorOnSecondary"
                    android:textFontWeight="400"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/myLoansCardShimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    shimmer:duration="100">

                    <include
                        android:id="@+id/myLoansCard"
                        layout="@layout/my_loans_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>